@@ -11,6 +11,7 @@
             Bangle.js2: In flash bootloader, don't store flash write code in RAM (no need) (fix #2458)
             Remove 65535-char max native string length restriction introduced in 2v20 on devices that could support more like Bangle.js 2
             E.memoryArea(0, ...) now returns `undefined`
+            Fix issue using Flat/Flash/Native Strings to create fields in objects
 
      2v20 : Ensure String.charCodeAt returns NaN for out of bounds chars
             Bangle.js2: When rendering overlays, *do not* use the current FG/BG color for 1 bit overlays
